appointment datepicker semi-functioning, need to append datepicker to new divs

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1>CRM</h1>
       <h2>Leads</h2>
         <div class="lead-container">
-          <button class="add-lead">Add a Lead</button>
+          <button class="add-lead">Add a Lead</button><br>
           <div class="lead-input-fields">
             <input type="text" name="add-name" placeholder="Name">
             <input type="tel" name="add-number" placeholder="Telephone">
@@ -24,7 +24,7 @@
 
       <h2>Calls</h2>
         <div class="calls-container">
-          <button class="log-calls">Log a Call</button>
+          <button class="log-calls">Log a Call</button><br>
           <div class="log-input-fields">
             <input type="text" name="add-name" placeholder="Name">
             <input type="tel" name="add-number" placeholder="Telephone">
@@ -36,14 +36,14 @@
 
       <h2>Appointments</h2>
         <div class="appointment-container">
-          <button class="appointment">Schedule an Appointment</button>
-            <input class="appointment-dates" type="text" class="date-cal" placeholder="Pick a Date"/>
-            <div id="datepicker"></div>
-
-          <!-- <div class="book-appointments">
-            <h3>Date:</h3>
-              <input type="text" id="datepicker">
-          </div> -->
+          <button class="appointment">Schedule an Appointment</button><br>
+          <input class="appointment-dates" id="datepicker" type="text" class="date-cal" placeholder="Pick a Date"/>&nbsp;<input type="text" id="alternate" size="30">
         </div>
   </body>
 </html>
+
+
+<!-- <div class="book-appointments">
+  <h3>Date:</h3>
+    <input type="text" id="datepicker">
+</div> -->
