datepicker now working on new divs - alternate view still updating original input field

--- a/index.html
+++ b/index.html
@@ -36,14 +36,10 @@
 
       <h2>Appointments</h2>
         <div class="appointment-container">
-          <button class="appointment">Schedule an Appointment</button><br>
-          <input class="appointment-dates" id="datepicker" type="text" class="date-cal" placeholder="Pick a Date"/>&nbsp;<input type="text" id="alternate" size="30">
+          <div class="appointment-fields">
+            <button class="appointment">Schedule an Appointment</button><br>
+            <input class="appointment-dates" id="datepicker" type="text" class="date-cal" placeholder="Appointment"/>&nbsp;<input type="text" id="alternate" size="30">
+          </div>
         </div>
   </body>
 </html>
-
-
-<!-- <div class="book-appointments">
-  <h3>Date:</h3>
-    <input type="text" id="datepicker">
-</div> -->
