added icons & modified styles to sidebar

--- a/index.html
+++ b/index.html
@@ -15,10 +15,24 @@
   <body>
       <!-- <h1 class="crm">CRM</h1> -->
     <div class="sidebar-container">
-      <a href="#" class="account-sidebar">Accounts</a>
-      <a href="#" class="lead-sidebar">Leads</a>
-      <a href="#" class="log-sidebar">Logs</a>
-      <a href="#" class="appointment-sidebar">Appointments</a>
+      <div class="sidebar-elements">
+        <a href="#" class="account-sidebar">
+          <img src="./images/icons/add-contact.png" class="lead-icon" alt="lead-logo">
+          <p>Accounts</p>
+        </a>
+        <a href="#" class="lead-sidebar">
+          <img src="./images/icons/user.png" class="user-icon" alt="user-logo">
+          <p>Leads</p>
+        </a>
+        <a href="#" class="log-sidebar">
+          <img src="./images/icons/log.png" class="log-icon" alt="log-logo">
+          <p>Logs</p>
+        </a>
+        <a href="#" class="appointment-sidebar">
+          <img src="./images/icons/appointment.png" class="appointment-icon" alt="appointment-logo">
+          <p>Appointments</p>
+        </a>
+      </div>
     </div>
 
     <div class="crm-elements-container">
