--- a/index.html
+++ b/index.html
@@ -48,10 +48,15 @@
           <button class="add-lead">Add a Lead</button><br>
           <div class="lead-input-fields">
             <input type="text" id="lead-name" value="" name="add-name" placeholder="Name">
-            <input type="tel" id="lead-tel" value="" name="add-number" placeholder="Telephone">
+            <input type="text" id="lead-tel" value="" name="add-number" placeholder="Telephone">
             <button class="remove_field">Delete Lead</button>
-            <button class="add-account">Add to Account</button>
           </div>
+            <h3>Add a Lead to Accounts</h3>
+            <div class="lead-to-account-container">
+              <input type="text" id="account-lead-name" value="" name="account-add-name" placeholder="Name">
+              <input type="text" id="account-lead-tel" value="" name="account-add-number" placeholder="Telephone">
+              <button class="add-account">Add to Account</button>
+            </div>
         </div>
 
         <div class="calls-container">
